# sol

./: CMakeLists.txt  README.txt  bytecode.txt  codegen.cc  compiler.hpp  debug.cc  debug.hpp  hello.mod  intrprtr.cc  intrprtr.hpp  math.mod  memory.cc  memory.hpp  objects.cc  objects.hpp  other.cc  other.hpp  parser.cc  primitiv.cc  primitiv.hpp  primitiv.txt  scanner.cc  sol.bnf  sol.cc  sol.cfg  sol.hpp  streams.cc  streams.hpp  sysclass.txt  sysdep.cc  sysdep.hpp  system.mod  test.mod
